WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
51016
Clang fails to build the JSC interpreter
https://bugs.webkit.org/show_bug.cgi?id=51016
Summary
Clang fails to build the JSC interpreter
Cameron Zwarich (cpst)
Reported
2010-12-13 23:04:00 PST
Clang fails to build the JSC interpreter due to an indirect goto out of a protected scope. Interestingly enough, GCC doesn't emit destructors here, which is generally incorrect code.
Attachments
Proposed patch
(1.58 KB, patch)
2010-12-13 23:09 PST
,
Cameron Zwarich (cpst)
eric
: review+
zwarich
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Cameron Zwarich (cpst)
Comment 1
2010-12-13 23:09:55 PST
Created
attachment 76507
[details]
Proposed patch
Eric Seidel (no email)
Comment 2
2010-12-14 00:47:28 PST
Comment on
attachment 76507
[details]
Proposed patch OK. rs=me.
Eric Seidel (no email)
Comment 3
2010-12-20 22:47:18 PST
r74029
. Please use webkit-patch land to land your changes so bugs get updated when you do.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug