Reviewed by Eric Seidel.

Clang fails to build the JSC interpreter
https://bugs.webkit.org/show_bug.cgi?id=51016

Clang does not allow indirect gotos out of scopes with cleanup. GCC 4.2 allows
them, but it does not correctly generate the cleanup, causing a leak if the
cleanup decrements a reference count.

* interpreter/Interpreter.cpp:
(JSC::Interpreter::privateExecute): Put an Identifier into its own scope.


Canonical link: https://commits.webkit.org/64376@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74029 268f45cc-cd09-0410-ab3c-d52691b4dbfc